--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Time tracker</title>
   </head>
   <body class="h-full">
-    <div id="root"></div>
+    <div id="root" class="h-full flex flex-col"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
